# MEXC-GridTrader

./: .env.example  .gitignore  README.md  app.py  config.py  docker-compose.yml  requirements.txt  test_inside_bar.py
backend/: Dockerfile  README.md  app.py  config.py  package-lock.json  pyproject.toml  test_inside_bar.py  test_live_paper_ib.py  test_patched_ib.py
backend/src/: __init__.py  api_integration.py  grid_backtester.py  live_paper_trading.py  metrics.py  patched_strategy.py  results_storage.py  trading_strategy.py
backend/src/data_handler/: base_data_handler.py  exchange_live_feed.py  live_data_websocket.py
backend/templates/pages/: dashboard.html  docs_viewer.html  paper_trading.html  result_detail.html
backend/templates/partials/: _docs_index.html  _navbar.html
backend/tests/: __init__.py  test_backtest_api.py  test_livedatawebsocket.py
docs/: CHANGELOG.md  INDICATORS.md  ProjectStructure-Planning.md  ROADMAP-VISUAL.md  ROADMAP.md  STRATEGY.md  TODO.md  live_paper_trading_detailed_plan.md  live_paper_trading_plan.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: main.tsx
frontend/src/components/: BacktestList.tsx  BacktestManagement.tsx  CandlestickChart.tsx  DocsIndex.css  DocsIndex.tsx  IndicatorParamsDialog.tsx  Navbar.css  Navbar.tsx  StrategyOptimizer.tsx  StrategyParameters.tsx  ThemeSwitcher.tsx  index.ts
frontend/src/hooks/: index.ts
frontend/src/pages/: Backtest.css  Backtest.tsx  Backtests.tsx  Dashboard.css  Dashboard.tsx  DocsViewer.css  DocsViewer.tsx  Optimize.tsx  ResultDetail.css  ResultDetail.tsx  Results.tsx  index.ts
frontend/src/services/: BacktestService.ts  index.ts
frontend/src/theme/: README.md  ThemeProvider.tsx  theme.ts  themeUtils.ts
frontend/src/types/: index.ts
frontend/tests/: backtest.spec.ts  basic.spec.ts  navigation.spec.ts  optimize.spec.ts
src/: api_integration.py  grid_backtester.py  metrics.py  results_storage.py  trading_strategy.pine  trading_strategy.py
src/data_handler/: base_data_handler.py
templates/: index.html  result_detail.html  results.html
templates/pages/: dashboard.html
templates/partials/: _navbar.html
tests/: __init__.py  test_api_integration.py
(+4 files in other folders)
