[tool.poetry]
name = "mexc-auto-trading-dashboard"
version = "0.3.1"
description = "Backend for MEXC Auto Trading Dashboard"
authors = ["imKXNNY <kenny.gueclue@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pandas = "^2.2.3"
numpy = "^2.2.3"
plotly = "^6.0.0"
ccxt = "^4.4.59"
pandas-ta = "^0.3.14b0"
python-dotenv = "^1.0.1"
backtrader = "^1.9.78.123"
markdown2 = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
